quick fix for overflowing keep attribution

--- a/kifi-backend/modules/shoebox/angular/src/keep/keepCard.styl
+++ b/kifi-backend/modules/shoebox/angular/src/keep/keepCard.styl
@@ -601,7 +601,7 @@ defaultBorderColorOverlayUsingBefore(borderWidth)  // slightly darkens an image'
 
   .kf-keep-card-activity-attribution-container
   .kf-keep-card-attribution-container
-    display: flex
+    display: inline-block
     flex-direction: row
     align-items: center
     margin-bottom: 0px
